# kvell

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  INCEPTION_DECK.md  LICENSE  PBI.json  README.md  beunit.txt  diff.txt  diff2.txt  diff_test.txt  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml  feunit.txt  package-lock.json  sample.html  stack.txt
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: PROMPT.md  bug.md  enabler.md  request.md  spike.md
.prompts/: 00_system_governance.md  01_ubiquitous.md  100_instruction.md  10_backend.md  11_performance.md  20_frontend.md  21_design_tokens.md  30_BDD.md  31_E2E.md  40_PR_template.md  99_PR_template.md  99_implementation.md  README.md  TODO.md
apps/api/: .env.example  Dockerfile  pyproject.toml  test_debug.py  test_health.sh
apps/api/scripts/: seed_bonfires.py
apps/api/src/: main.py
apps/api/src/adapter/: constants.py
apps/api/src/adapter/entrypoints/: health_router.py
apps/api/src/adapter/gateways/: mongo_health_repository.py
apps/api/src/adapter/infra/: logger.py
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/adapter/: constants.py
apps/api/src/app/adapter/entrypoints/: bonfire_router.py  debug_router.py  dependencies.py  error_handler.py  health_router.py  spark_router.py
apps/api/src/app/adapter/gateways/: __init__.py  base_repository.py  mongo_bonfire_repository.py  mongo_health_repository.py  mongo_spark_repository.py  redis_pubsub_gateway.py  redis_rate_limiter.py  redis_threshold_config.py  simple_ip_provider.py
apps/api/src/app/adapter/infra/: __init__.py  database.py  log_events.py  logger.py  redis_client.py  settings.py
apps/api/src/app/domain/: constants.py  exception.py
apps/api/src/app/domain/model/: bonfire.py  health_message.py  spark.py  spark_engagement.py
apps/api/src/app/domain/repository/: bonfire_repository.py  health_repository.py  spark_repository.py  threshold_config_repository.py
apps/api/src/app/domain/service/: bonfire_service.py  identity_provider.py  ignition_service.py  rate_limiter.py
apps/api/src/app/usecase/add_fuel/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/check_promotion/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/dto/: health_dto.py  spark_dto.py  timeline_event.py
apps/api/src/app/usecase/extend_bonfire/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/get_bonfires/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/health_check/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/ports/: __init__.py  logger.py  pubsub.py
apps/api/src/app/usecase/post_spark/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/stream_bonfire/: __init__.py  interactor.py  interface.py
apps/api/src/app/usecase/stream_timeline/: __init__.py  interactor.py  interface.py
apps/api/src/domain/repository/: health_repository.py
apps/api/src/infra/: database.py
apps/api/src/usecase/: __init__.py
apps/api/src/usecase/dto/: health_dto.py
apps/api/src/usecase/health_check/: interactor.py  interface.py
apps/api/src/usecase/ports/: logger.py
apps/api/tests/: README.md
apps/api/tests/integration/: conftest.py  test_bonfire.py  test_health.py  test_spark.py
apps/api/tests/unit/adapter/entrypoints/: test_error_handler.py  test_health_router.py
apps/api/tests/unit/adapter/infra/: test_logger.py
apps/api/tests/unit/domain/: test_exception.py
apps/api/tests/unit/domain/model/: test_bonfire.py  test_health_message.py  test_spark.py  test_spark_engagement.py
apps/api/tests/unit/domain/service/: test_ignition_service.py
apps/api/tests/unit/usecase/add_fuel/: __init__.py  test_interactor.py
apps/api/tests/unit/usecase/check_promotion/: test_interactor.py
apps/api/tests/unit/usecase/health_check/: test_interactor.py
apps/api/tests/unit/usecase/post_spark/: __init__.py  test_interactor.py
apps/api/tests/unit/usecase/stream_bonfire/: __init__.py  test_interactor.py
apps/api/tests/unit/usecase/stream_timeline/: __init__.py  test_interactor.py
apps/tests/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/tests/e2e/: constants.ts
apps/tests/e2e/features/: 01_post_spark.feature  02_spark_timeline.feature  02_timeline.feature  03_fuel.feature  03_spark_img.feature  04_bonfire.feature  05_bonfire_detail.feature  06_bonfire_detail.feature  calculation.md  fuel.feature  health_check.feature  post_spark.feature  timeline.feature  view_spark.feature  view_spark.feature.wip  ws&rest.md
apps/tests/playwright-report/: index.html
apps/tests/test-results/: .last-run.json
apps/web/: .env.production  eslint.config.js  index.html  package-lock.json  package.json  reproduce_regex.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/tests/: setup.ts
docs/: analyze.md  hatsukoi.md  implementation_plan_bonfire_detail.md  init.md  project.md  prompt.md
docs/agile/: 00_about.md  01_inception_deck.md
docs/marketing/: marketing.md  persona.md  research.md
docs/specs/: secure_id.md
infra/: README.md  cdn.yml  instance.yml  network.yml  storage.yml
infra/scripts/: backup.sh  setup-prod.sh
tools/: debug_redis.py
(+133 files in other folders)
