[project]
name = "kvell-api"
version = "0.1.0"
description = "Kvell Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "pydantic>=2.12.4",
    "uvicorn[standard]>=0.38.0",
    "motor>=3.7.0",
    "python-dotenv>=1.0.1",
    "redis>=7.1.0",
    "sentry-sdk>=2.46.0",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "import-linter",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213", # Docstring競合回避
    "COM812", "ISC001", # Formatter競合回避
    "ANN101", # selfの型定義不要
    "B008", # FastAPIのDepends
    "PLR0913", # 引数数の制限。DI時に必要になるため無視
    "TD003", "FIX002" # TODOコメント許可
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802", "D", "ANN", "PLR2004", "E501", "SLF001", "PLE1205", "G010", "TRY301", "EM101", "TRY400"]

[tool.ruff.format]
quote-style = "double"

# Clean Architecture Guard Rails
[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Clean Architecture Layers"
type = "layers"
layers = [
    "app.adapter",
    "app.usecase",
    "app.domain",
]

[tool.taskipy.tasks]
test = "pytest"
coverage = "pytest --cov=src --cov-report=term-missing"
type-check = "pyright"
lint = "ruff check . && PYTHONPATH=src lint-imports"
format-check = "ruff format --check ."
check-all = "task type-check && task lint && task format-check && task test"
lint-fix = "ruff check --fix ."
format-fix = "ruff format ."
fix-all = "task format-fix && task lint-fix"


[tool.pyright]
# srcディレクトリをimportのルートとして認識させる
extraPaths = ["src"]

typeCheckingMode = "strict"
# ==============================
# 未使用コードを検出
# ==============================
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedCoroutine = true
reportUnusedExpression = true

# ==============================
# 型の不明確さを禁止
# ==============================
reportMissingTypeStubs = true
reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownParameterType = true

# ==============================
# 不要・矛盾を検出
# ==============================
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true

# ==============================
# 型システムの誤用
# ==============================
reportInvalidTypeVarUse = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportOverlappingOverload = true

# ==============================
# import やモジュールの問題
# ==============================
reportMissingImports = true
reportMissingModuleSource = true
reportPrivateUsage = true



[tool.pytest.ini_options]
# src配下のモジュールを直接importできるようにする
pythonpath = ["src"]

testpaths = ["tests"]
addopts = "-v --strict-markers --strict-config"
